--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -1,7 +1,7 @@
 <div>
   <button nz-button
           class="create-button"
-          (click)="onShowForm()"><span nz-icon
+          (click)="onCreate()"><span nz-icon
           nzType="plus"
           nzTheme="outline"></span>{{ 'ACTION.CREATE' | translate }}</button>
 </div>
