--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -59,6 +59,5 @@
 </nz-table>
 
 <ng-template #noResult>
-  <nz-empty class="pt-5"
-            [nzNotFoundContent]="'NO_RESULT' | translate"></nz-empty>
+  <nz-empty [nzNotFoundContent]="'NO_RESULT' | translate"></nz-empty>
 </ng-template>
