--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -1,16 +1,21 @@
 @import '/src/variables.scss';
 
-.create-button {
-  background: $primary-color;
-  color: $white;
-  border: none;
-  border-radius: 0.5rem;
-  transition: $transition;
-}
+.top-table {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  .create-button {
+    background: $primary-color;
+    color: $white;
+    border: none;
+    border-radius: 0.5rem;
+    transition: $transition;
+  }
 
-.create-button:hover {
-  opacity: 0.8;
-  cursor: pointer;
+  .create-button:hover {
+    opacity: 0.8;
+    cursor: pointer;
+  }
 }
 
 .actions:hover {
