--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -1,3 +1,4 @@
+<ng-content select="[slot=top]"></ng-content>
 <nz-table [style.margin-top.rem]="'0.5'"
           [nzSize]="'small'"
           [nzSimple]=""
