--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -28,6 +28,44 @@
       -webkit-text-fill-color: transparent;
     }
   }
+  &--star {
+    padding-top: 1rem;
+    grid-template-columns: repeat(1, 1fr);
+    height: 11rem;
+    text-align: center;
+    .card {
+      padding: 1rem;
+      height: 10rem;
+      color: $black;
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: center;
+      box-shadow: 0px 2px 5px 1px rgba($color: $gray, $alpha: 0.25);
+      border-radius: 0.5rem;
+      transition: $transition;
+      span {
+        line-height: 110%;
+        font-size: 3rem;
+        font-weight: 600;
+      }
+      .sub-title {
+        font-style: italic;
+        line-height: 100%;
+        font-size: 1.5rem;
+      }
+    }
+    .card:hover {
+      cursor: pointer;
+      box-shadow: 0 0px 5px 2px rgba($color: $primary-color, $alpha: 1),
+        0 0px 10px 5px rgba($color: $primary-color, $alpha: 0.5);
+      span,
+      .sub-title {
+        background: $magenta-blue-linear-gradient;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: $mobile) {
