--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -88,6 +88,8 @@
                            nzLabel="HSK 5"></nz-option>
                 <nz-option nzValue="hsk6"
                            nzLabel="HSK 6"></nz-option>
+                <nz-option nzValue="z---"
+                           nzLabel="-------"></nz-option>
               </nz-select>
               <ng-template #errorHsk
                            let-control>
