--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -22,7 +22,7 @@
               (click)="onEdit(value)"></span>
 
         <!-- Testing delete is OK-->
-        <span nz-popconfirm
+        <!-- <span nz-popconfirm
               [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate"
               nzOkText="OK"
               nzCancelText="Cancel"
@@ -31,7 +31,7 @@
               class="delete-button"
               nz-icon
               nzType="delete"
-              nzTheme="fill"></span>
+              nzTheme="fill"></span> -->
         <!-- {{ value }} -->
       </div>
     </ng-template>
