--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -88,6 +88,8 @@
                            nzLabel="HSK 5"></nz-option>
                 <nz-option nzValue="hsk6"
                            nzLabel="HSK 6"></nz-option>
+                <nz-option nzValue="hsk79"
+                           nzLabel="HSK 7-9"></nz-option>
                 <nz-option nzValue="z---"
                            nzLabel="-------"></nz-option>
               </nz-select>
