--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -39,19 +39,19 @@
       flex-flow: column wrap;
       justify-content: center;
       color: $gray;
-      background: $magenta-blue-white-linear-gradient;
+      background: $second_linear-gradient;
       box-shadow: 0 2px 10px 0 rgba($color: $gray, $alpha: 0.5);
       border-radius: 0.5rem;
       transition: $transition;
       span {
-        color: $second-white;
-        text-shadow: 0 1px 10px $gray;
+        color: $white;
+        text-shadow: 0 1px 10px rgba($color: $black, $alpha: 0.75);
         line-height: 110%;
         font-size: 4rem;
         font-weight: 600;
       }
       .sub-title {
-        color: $black;
+        color: $gray;
         font-style: italic;
         line-height: 100%;
         font-size: 1.25rem;
