--- a/src/app/shared/audio-list/audio-list.component.scss
+++ b/src/app/shared/audio-list/audio-list.component.scss
@@ -8,7 +8,7 @@
     position: sticky;
     padding: 0 2rem;
     height: 7rem;
-    background: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.75), rgba($color: $blue, $alpha: 0.75));
+    background: $second_linear-gradient;
     display: flex;
     flex-direction: column;
     align-content: center;
