--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -10,7 +10,7 @@
               (click)="onCreate()"><span nz-icon
               nzType="plus"
               nzTheme="outline"></span>{{ 'ACTION.CREATE' | translate }}</button>
-      <span><u>{{ 'TOTALS' | translate: { totals: vm.words.length } }}</u></span>
+      <span><i>{{ 'TOTALS' | translate: { totals: vm.words.length } }}</i></span>
     </div>
     <ng-template appTableCell="actions"
                  let-rowIndex="rowIndex"
