--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="(vm$ | async) as vm">
   <app-table [trackByIndex]="trackByIndex"
              [records]="vm.words"
+             [total]="vm.total"
              [isLoading]="vm.isLoading"
              [headers]="headers">
     <div slot="top"
@@ -10,7 +11,7 @@
               (click)="onCreate()"><span nz-icon
               nzType="plus"
               nzTheme="outline"></span>{{ 'ACTION.CREATE' | translate }}</button>
-      <span><i>{{ 'TOTALS' | translate: { totals: vm.words.length } }}</i></span>
+      <span><i>{{ 'TOTALS' | translate: { totals: vm.total } }}</i></span>
     </div>
     <ng-template appTableCell="actions"
                  let-rowIndex="rowIndex"
@@ -45,35 +46,31 @@
     <ng-template appTableCell="hsk"
                  let-rowIndex="rowIndex"
                  let-value>
-      <ng-container *ngIf="value === 'hsk1'">
-        <nz-tag [nzColor]="'green'">HSK 1</nz-tag>
-      </ng-container>
-      <ng-container *ngIf="value === 'hsk2'">
-        <nz-tag [nzColor]="'blue'">HSK 2</nz-tag>
-      </ng-container>
-      <ng-container *ngIf="value === 'hsk3'">
-        <nz-tag [nzColor]="'geekblue'">HSK 3</nz-tag>
-      </ng-container>
-      <ng-container *ngIf="value === 'hsk4'">
-        <nz-tag [nzColor]="'purple'">HSK 4</nz-tag>
-      </ng-container>
-      <ng-container *ngIf="value === 'hsk5'">
-        <nz-tag [nzColor]="'orange'">HSK 5</nz-tag>
-      </ng-container>
-      <ng-container *ngIf="value === 'hsk6'">
-        <nz-tag [nzColor]="'volcano'">HSK 6</nz-tag>
-      </ng-container>
-      <ng-container *ngIf="value === 'hsk79'">
-        <nz-tag [nzColor]="'magenta'">HSK 7-9</nz-tag>
-      </ng-container>
-      <!-- <ng-container *ngIf="value === 'hsk8'">
-        <nz-tag [nzColor]="'red'">HSK 8</nz-tag>
-      </ng-container>
-      <ng-container *ngIf="value === 'hsk9'">
-        <nz-tag [nzColor]="'magenta'">HSK 9</nz-tag>
-      </ng-container> -->
-      <ng-container *ngIf="value === 'z---'">
-        <nz-tag>--------</nz-tag>
+      <ng-container [ngSwitch]="value">
+        <ng-container *ngSwitchCase="'hsk1'">
+          <nz-tag [nzColor]="'green'">HSK 1</nz-tag>
+        </ng-container>
+        <ng-container *ngSwitchCase="'hsk2'">
+          <nz-tag [nzColor]="'blue'">HSK 2</nz-tag>
+        </ng-container>
+        <ng-container *ngSwitchCase="'hsk3'">
+          <nz-tag [nzColor]="'geekblue'">HSK 3</nz-tag>
+        </ng-container>
+        <ng-container *ngSwitchCase="'hsk4'">
+          <nz-tag [nzColor]="'purple'">HSK 4</nz-tag>
+        </ng-container>
+        <ng-container *ngSwitchCase="'hsk5'">
+          <nz-tag [nzColor]="'orange'">HSK 5</nz-tag>
+        </ng-container>
+        <ng-container *ngSwitchCase="'hsk6'">
+          <nz-tag [nzColor]="'volcano'">HSK 6</nz-tag>
+        </ng-container>
+        <ng-container *ngSwitchCase="'hsk79'">
+          <nz-tag [nzColor]="'magenta'">HSK 7-9</nz-tag>
+        </ng-container>
+        <ng-container *ngSwitchCase="'z---'">
+          <nz-tag>--------</nz-tag>
+        </ng-container>
       </ng-container>
     </ng-template>
 
