--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -47,7 +47,7 @@ nz-table {
 ::-webkit-scrollbar {
   width: 7.5px;
   height: 10px;
-  // background: #fff;
+  background: #fff;
 }
 ::-webkit-scrollbar-thumb {
   height: initial;
