--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -10,6 +10,9 @@
     font-weight: 300;
     letter-spacing: 1px;
     font-display: fall-back;
+    .ant-table-header {
+      overflow-y: hidden !important;
+    }
   }
   nz-table {
     box-shadow: 0 2px 10px 5px rgba($color: $black, $alpha: 0.25);
