--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -17,6 +17,10 @@
     cursor: pointer;
   }
 }
+.actions {
+  display: flex;
+  justify-content: center;
+}
 
 .actions:hover {
   cursor: pointer;
