--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -66,10 +66,10 @@
           <nz-tag [nzColor]="'volcano'">HSK 6</nz-tag>
         </ng-container>
         <ng-container *ngSwitchCase="'hsk79'">
-          <nz-tag [nzColor]="'magenta'">HSK 7-9</nz-tag>
+          <nz-tag [nzColor]="'magenta'">HSK 7+</nz-tag>
         </ng-container>
         <ng-container *ngSwitchCase="'z---'">
-          <nz-tag>--------</nz-tag>
+          <nz-tag>---------</nz-tag>
         </ng-container>
       </ng-container>
     </ng-template>
