--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -21,7 +21,6 @@
   display: flex;
   justify-content: center;
 }
-
 .actions:hover {
   cursor: pointer;
 }
@@ -39,12 +38,17 @@ nz-table {
     border: unset !important;
   }
 }
-
 ::ng-deep {
   .ant-table-column-title {
     position: static;
     z-index: auto;
   }
+}
+
+.ant-tag {
+  margin: 0;
+  padding: 0 0.25rem;
+  width: -webkit-fill-available;
 }
 
 /****************** thumbnail ******************/
