--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -28,9 +28,7 @@
       align-items: center;
       cursor: pointer;
       .selected {
-        background: $linear-gradient;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
+        color: $primary-color;
         opacity: 0.8;
       }
       a {
