--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -3,7 +3,8 @@
              [records]="vm.words"
              [total]="vm.total"
              [isLoading]="vm.isLoading"
-             [headers]="headers">
+             [headers]="headers"
+             [allowSelectRow]="false">
     <div slot="top"
          class="top-table">
       <button nz-button
