--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -14,9 +14,6 @@
       background: $white;
     }
   }
-  nz-table {
-    box-shadow: 0 2px 10px 5px rgba($color: $black, $alpha: 0.25);
-  }
   .ant-table-thead > tr > th {
     background: $white;
   }
@@ -26,4 +23,25 @@
   .ant-table-thead th.ant-table-column-sort:hover {
     background: rgba($color: $white, $alpha: 0.5);
   }
+}
+
+nz-table {
+  box-shadow: 0 2px 10px 5px rgba($color: $black, $alpha: 0.25);
+}
+
+nz-pagination {
+  padding: 0.25rem 0 !important;
+  margin: 0 !important;
+}
+
+/****************** thumbnail ******************/
+::-webkit-scrollbar {
+  width: 7.5px;
+  height: 10px;
+  background: #fff;
+}
+::-webkit-scrollbar-thumb {
+  height: initial;
+  background: $white;
+  border-radius: 5px;
 }
