--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -4,7 +4,7 @@
              [total]="vm.total"
              [isLoading]="vm.isLoading"
              [headers]="headers"
-             [allowSelectRow]="false">
+             [allowSelectRow]="true">
     <div slot="top"
          class="top-table">
       <button nz-button
