--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -11,13 +11,13 @@
       <small class="navbar__slogan">{{ 'SLOGAN' | translate }}</small>
     </div>
     <div class="navbar__menu">
-      <a routerLink="/home"
+      <!-- <a routerLink="/home"
          routerLinkActive="selected">
         <span nz-icon
               nzType="home"
               [nzTheme]="'twotone'"
               [nzTwotoneColor]="'#b48ead'"></span>
-      </a>
+      </a> -->
       <!-- <a routerLink="/dictionary"
          routerLinkActive="selected">
         {{ 'DICTIONARY' | translate }}
