--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -44,6 +44,12 @@
       {{ value | lowercase }}
     </ng-template>
 
+    <ng-template appTableCell="titlecase"
+                 let-rowIndex="rowIndex"
+                 let-value>
+      {{ value | titlecase }}
+    </ng-template>
+
     <ng-template appTableCell="hsk"
                  let-rowIndex="rowIndex"
                  let-value>
