--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -51,8 +51,7 @@
         <div nz-col
              nzSpan="12">
           <nz-form-item>
-            <nz-form-label nzRequired
-                           nzFor="chinaVietnamWord">{{'DICTIONARY.CHINA_VIETNAM_WORD' | translate }}</nz-form-label>
+            <nz-form-label nzFor="chinaVietnamWord">{{'DICTIONARY.CHINA_VIETNAM_WORD' | translate }}</nz-form-label>
             <nz-form-control [nzErrorTip]="errorChinaVietnamWord">
               <input nz-input
                      placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
