--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -2,7 +2,7 @@
 
 ::ng-deep {
   .ant-table.ant-table-small {
-    font-family: sans-serif, monospace;
+    // font-family: sans-serif, monospace;
     font-size: 1rem;
   }
   .ant-table {
