--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -82,7 +82,7 @@
           <nz-tag [nzColor]="'magenta'">HSK 7+</nz-tag>
         </ng-container>
         <ng-container *ngSwitchCase="'z---'">
-          <nz-tag>---------</nz-tag>
+          <nz-tag>------</nz-tag>
         </ng-container>
       </ng-container>
     </ng-template>
