--- a/src/app/pages/dictionary/dictionary.component.html
+++ b/src/app/pages/dictionary/dictionary.component.html
@@ -1,4 +1,4 @@
-<div class="page-content">
+<div class="page">
   <i> {{'PLAYGROUND' | translate}} </i>
   <app-dictionary-list></app-dictionary-list>
 </div>
